--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,17 @@
 {
-	"mesonbuild.configureOnOpen": true
+	"mesonbuild.configureOnOpen": true,
+	"editor.insertSpaces": false,
+	"C_Cpp.codeAnalysis.clangTidy.enabled": true,
+	"C_Cpp.default.cppStandard": "c++17",
+	"C_Cpp.default.cStandard": "c17",
+	"C_Cpp.default.includePath": [
+		"${workspaceRoot}/**"
+	],
+	"C_Cpp.default.configurationProvider": "ms-vscode.cpptools",
+	"clang-tidy.buildPath": "build",
+	"mesonbuild.buildFolder": "build",
+	"clang-tidy.blacklist": [
+		"*.hxx",
+		"*.cxx"
+	],
 }
