--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ tempCodeRunnerFile.*
 # Exclusions for user-specific files
 !.vscode/extensions.json
 !.vscode/settings.json
+!.vscode/elbeecrypt.code-workspace
 
 # Build results
 [Dd]ebug/
