Add {fmt} dependency

--- a/meson.build
+++ b/meson.build
@@ -43,7 +43,8 @@ meson_dep_loc = '.mesondep/'
 ####################################
 ## Set the dependencies needed by the project (Conan will take care of this section)
 dependencies = [
-	dependency('libsodium')
+	dependency('libsodium'),
+	dependency('fmt')
 ]
 
 ####################################
